# msrChat

./: .clang-format  .gitignore  .traeignore  Architecture_Optimization_Report.md  README.md  StaticAnalysisReport.md  build_and_run.sh  start_services.sh  stop.sh
.trae/documents/: plan_20260207_161818.md  plan_20260207_191258.md
GateServer/: .gitignore  CMakeLists.txt
GateServer/include/: CServer.h  HttpConnection.h  LogicSystem.h  Singleton.h
GateServer/src/: CServer.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp
QmsrChat/: CMakeLists.txt  global.cpp  global.h  httpmanagement.cpp  httpmanagement.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  singleton.h
QmsrChat/style/: stylesheet.qss
client/QmsrChat/: .gitignore  CMakeLists.txt  DEV_LOG.md  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  bubbleframe.cpp  bubbleframe.h  chatarea.cpp  chatarea.h  chatbubble.cpp  chatbubble.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatsidebar.cpp  chatsidebar.h  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  (+49 more)
client/QmsrChat/style/: stylesheet.qss
server/: 学习指南.md  调试指南.md
server/ChatServer/: CMakeLists.txt  config.ini
server/ChatServer/include/: AsioIOServicePool.h  CServer.h  CSession.h  ConfigMgr.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  Singleton.h  StatusGrpcClient.h  const.h
server/ChatServer/src/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatServer.cpp  ConfigMgr.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  StatusGrpcClient.cpp
server/GateServer/: .gitignore  Architecture_Optimization_Report.md  CMakeLists.txt  config.ini  config.ini.example  message.proto
server/GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigManagement.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
server/GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigManagement.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp
server/StatusServer/: CMakeLists.txt  config.ini  message.proto
server/StatusServer/include/: AsioIOServicePool.h  ConfigMgr.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  const.h
server/StatusServer/src/: AsioIOServicePool.cpp  ConfigMgr.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp
server/test/: stress_test.py
shared/: message.proto
开发文档/: day01-项目结构概述.md  day02-客户端Http管理类设计.md  day03-visualstudio配置boost和jsoncpp.md  day04-beast搭建http服务器.md  day05-处理post请求并解析json数据.md  day06-windows配置grpc.md  day07-visualstudio配置grpc.md  day08-邮箱认证服务.md  day09-redis服务搭建.md  day10-多服务验证码派发功能调试.md  day11-注册功能.md  day12-注册界面完善.md  day13-重置界面.md  day14-登录功能.md  day15-客户端Tcp管理类设计.md  day16-asio实现tcp服务器.md  day17-登录服务验证和客户端数据管理.md  day18-聊天主界面.md  day19-实现搜索框和聊天列表.md  day20-动态加载聊天列表.md  day21-滚动聊天布局设计.md  day22.气泡聊天对话框.md  day23.侧边栏切换和搜索联动功能.md  day24.事件过滤器实现点击位置判断.md  day25-实现好友申请界面.md  day26-实现联系人列表和好友申请列表.md  day27-分布式服务设计.md  day28-好友查询和申请.md  day29-好友认证和聊天通信.md  day30-项目难点和面试技巧.md  day31-文件传输.md  day32分布式锁设计思路.md  day33单服程踢人逻辑.md  day34多服程踢人逻辑.md  day35心跳逻辑.md  day36-实现头像编辑框.md  day37-聊天信息存储方案.md  day38-断点续传.md  day39-多媒体信息传输.md  day40-聊天图片资源续传和进度显示.md  (+2 more)
